--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <html>
 <head>
+<style>
+td{border:1px black;}
+</style>
 </head>
 <body>
+
+<table style="width:100%;height:100%;">
+
+<tr style="width:100%;height:50%;">
+<td style="width:50%;height:100%;"></td>
+<td style="width:50%;height:100%;"></td>
+</tr>
+
+<tr style="width:100%;height:50%;">
+<td style="width:50%;height:100%;"></td>
+<td style="width:50%;height:100%;"></td>
+</tr>
+
+</table>
 
 </body>
 </html>
