--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-td{border:1px black;}
+td{border:1px solid black;}
 </style>
 </head>
 <body>
@@ -9,13 +9,16 @@ td{border:1px black;}
 <table style="width:100%;height:100%;">
 
 <tr style="width:100%;height:50%;">
-<td style="width:50%;height:100%;"></td>
-<td style="width:50%;height:100%;"></td>
+<td style="width:50%;height:50%;" id="TDclass"></td>
+<td style="width:50%;height:50%;" id="TDmandates"></td>
 </tr>
 
 <tr style="width:100%;height:50%;">
-<td style="width:50%;height:100%;"></td>
-<td style="width:50%;height:100%;"></td>
+<td style="width:50%;height:50%;" id="TDstory"></td>
+<td style="width:50%;height:50%;" id="TDquest">
+    <span id="HPspan">HP: <span id="HPcurrent">0</span>/<span id="HPmax"></span>
+<br><span id="ESspan">ES: <span id="EScurrent">0</span>/<span id="ESmax"></span>
+</td>
 </tr>
 
 </table>
