--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ td{border:1px solid black;}
 <td style="width:50%;height:50%;" id="TDquest">
     <span id="HPspan">HP: <span id="HPcurrent">0</span>/<span id="HPmax"></span>
 <br><span id="ESspan">ES: <span id="EScurrent">0</span>/<span id="ESmax"></span>
+<br><span id="WOspan">World: <span id="WOcurrent">1</span>
+<br><span id="NDspan">Node: <span id="NOcurrent">0</span>
 </td>
 </tr>
 
