--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ td{border:1px solid black;}
 <tr style="width:100%;height:50%;">
 <td style="width:50%;height:50%;" id="TDstory"></td>
 <td style="width:50%;height:50%;" id="TDquest">
+<span id="WOspan" style="width:75px">World: <span id="WOcurrent">1</span></span>
+<span id="NDspan" style="width:75px">Node: <span id="NDcurrent">0</span></span>
 <table style="width:100%">
 <tr style="width:100%"><td style="width:50%"><span id="HPspan">HP: <span id="HPcurrent">0</span>/<span id="HPmax"></span>
 <br><span id="ESspan">ES: <span id="EScurrent">0</span>/<span id="ESmax"></span>
-<br><span id="WOspan">World: <span id="WOcurrent">1</span></span>
-<br><span id="NDspan">Node: <span id="NDcurrent">0</span></span>
 </td><td style="width:50%">
     <span id="ENHPspan">Enemy HP: <span id="ENHPcurrent">0</span>/<span id="ENHPmax">10</span></span>
 <br><span id="ENHPspan">Enemy Damage: <span id="ENDMcurrent">0</span></span>
