--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ td{border:1px solid black;}
 <tr style="width:100%;height:50%;">
 <td style="width:50%;height:50%;" id="TDstory"></td>
 <td style="width:50%;height:50%;" id="TDquest">
-<span id="WOspan" style="width:75px">World: <span id="WOcurrent">1</span></span>
-<span id="NDspan" style="width:75px">Node: <span id="NDcurrent">0</span></span>
+<span id="WOspan" style="width:70px;display:inline-block;">World: <span id="WOcurrent">1</span></span>
+<span id="NDspan" style="width:70px;display:inline-block;">Node: <span id="NDcurrent">0</span></span>
 <table style="width:100%">
 <tr style="width:100%"><td style="width:50%"><span id="HPspan">HP: <span id="HPcurrent">0</span>/<span id="HPmax"></span>
 <br><span id="ESspan">ES: <span id="EScurrent">0</span>/<span id="ESmax"></span>
