--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 td{border:1px solid black;}
 </style>
 </head>
-<body>
+<body onload="game.onLoad();">
 
 <table style="width:100%;height:100%;">
 
 <tr style="width:100%;height:50%;">
 <td style="width:50%;height:50%;" id="TDclass"></td>
-<td style="width:50%;height:50%;" id="TDmandates"></td>
+<td style="width:50%;height:50%;" id="TDstory"></td>
 </tr>
 
 <tr style="width:100%;height:50%;">
-<td style="width:50%;height:50%;" id="TDstory"></td>
+<td style="width:50%;height:50%;" id="TDmandates"></td>
 <td style="width:50%;height:50%;" id="TDquest">
 <span id="WOspan" style="width:70px;display:inline-block;">World: <span id="WOcurrent">1</span></span>
 <span id="NDspan" style="width:70px;display:inline-block;">Node: <span id="NDcurrent">0</span></span>
 <table style="width:100%">
-<tr style="width:100%"><td style="width:50%"><span id="HPspan">HP: <span id="HPcurrent">0</span>/<span id="HPmax"></span>
-<br><span id="ESspan">ES: <span id="EScurrent">0</span>/<span id="ESmax"></span>
+<tr style="width:100%"><td style="width:50%"><span id="HPspan">HP: <span id="HPcurrent">10</span>/<span id="HPmax">10</span>
+<br><span id="ESspan" style="display:none;visibility:hidden;">ES: <span id="EScurrent">0</span>/<span id="ESmax">0</span>
 </td><td style="width:50%">
-    <span id="ENHPspan">Enemy HP: <span id="ENHPcurrent">0</span>/<span id="ENHPmax">10</span></span>
+    <span id="ENHPspan">Enemy HP: <span id="ENHPcurrent">0</span>/<span id="ENHPmax">0</span></span>
 <br><span id="ENHPspan">Enemy Damage: <span id="ENDMcurrent">0</span></span>
 </td></tr></table>
 </td>
